--- a/.github/workflows/dataform_compile.yaml
+++ b/.github/workflows/dataform_compile.yaml
@@ -15,7 +15,10 @@ jobs:
             uses: actions/checkout@v4
 
           - name: Install Dataform dependencies
-            run: dataform install
-
+            uses: docker://dataformco/dataform:2.4.2
+            with:
+                args: install
           - name: Run dataform compile
-            run: dataform compile
+            uses: docker://dataformco/dataform:2.4.2
+            with:
+                args: compile
