--- a/.github/workflows/dataform_schema_validation.yaml
+++ b/.github/workflows/dataform_schema_validation.yaml
@@ -28,13 +28,13 @@ jobs:
             with:
                 args: install
 
-        #   - name: Create credentials file 
-        #     run: |
-        #       cat $GOOGLE_GHA_CREDS_PATH > .df-credentials.json
+          - name: Create credentials file 
+            run: |
+              cat $GOOGLE_GHA_CREDS_PATH > .df-credentials.json
 
-        #   - name: Change project_id to projectId
-        #     run: |
-        #       sed -i 's/project_id/projectId/g' .df-credentials.json
+          # - name: Change project_id to projectId
+          #   run: |
+          #     sed -i 's/project_id/projectId/g' .df-credentials.json
   
           - name: Execute Dataform dry run
             uses: docker://dataformco/dataform:2.8.3
