--- a/.github/workflows/dataform_schema_validation.yaml
+++ b/.github/workflows/dataform_schema_validation.yaml
@@ -32,11 +32,17 @@ jobs:
             run: |
               cat $GOOGLE_GHA_CREDS_PATH > .df-credentials.json
 
-          # - name: Change project_id to projectId
-          #   run: |
-          #     sed -i 's/project_id/projectId/g' .df-credentials.json
-  
-          - name: Execute Dataform dry run
-            uses: docker://dataformco/dataform:2.8.3
+          - name: Save File as Artifact
+            uses: actions/upload-artifact@v2
             with:
-                args: run --dry-run
+              name: .df-credentials
+              path: .df-credentials.json
+
+          # # - name: Change project_id to projectId
+          # #   run: |
+          # #     sed -i 's/project_id/projectId/g' .df-credentials.json
+  
+          # - name: Execute Dataform dry run
+          #   uses: docker://dataformco/dataform:2.8.3
+          #   with:
+          #       args: run --dry-run
