--- a/.github/workflows/dataform_schema_validation.yaml
+++ b/.github/workflows/dataform_schema_validation.yaml
@@ -30,10 +30,10 @@ jobs:
 
           - name: Create credentials file 
             run: |
-              cat $GOOGLE_GHA_CREDS_PATH > .df-credentials.json
+              cat $GOOGLE_APPLICATION_CREDENTIALS > .df-credentials.json
 
           - name: Save File as Artifact
-            uses: actions/upload-artifact@v2
+            uses: actions/upload-artifact@v4
             with:
               name: .df-credentials
               path: .df-credentials.json
