--- a/.github/workflows/dataform_schema_validation.yaml
+++ b/.github/workflows/dataform_schema_validation.yaml
@@ -28,10 +28,10 @@ jobs:
           #     service_account: 'dataform@bi-data-sine.iam.gserviceaccount.com'
           #     workload_identity_provider: 'projects/379706273353/locations/global/workloadIdentityPools/github/providers/my-repo'
           
-          # - name: Install Dataform dependencies
-          #   uses: docker://dataformco/dataform:2.8.3
-          #   with:
-          #       args: install
+          - name: Install Dataform dependencies
+            uses: docker://dataformco/dataform:2.8.3
+            with:
+                args: install
 
         #   - name: Create credentials file 
         #     run: |
