write secret to json file

--- a/.github/workflows/dataform_schema_validation.yaml
+++ b/.github/workflows/dataform_schema_validation.yaml
@@ -22,16 +22,14 @@ jobs:
             with:
               credentials_json: '${{ secrets.GCP_SECRET }}'
      
-          # - name: Authenticate Google Cloud
-          #   uses: google-github-actions/auth@v2
-          #   with:
-          #     service_account: 'dataform@bi-data-sine.iam.gserviceaccount.com'
-          #     workload_identity_provider: 'projects/379706273353/locations/global/workloadIdentityPools/github/providers/my-repo'
           
           - name: Install Dataform dependencies
             uses: docker://dataformco/dataform:2.8.3
             with:
                 args: install
+
+          - name: Write credentials file
+            run: echo '${{ secrets.GCP_SECRET }}' >> .df-credentials.json
 
         #   - name: Create credentials file 
         #     run: |
