--- a/.github/workflows/dataform_schema_validation.yaml
+++ b/.github/workflows/dataform_schema_validation.yaml
@@ -22,6 +22,11 @@ jobs:
             with:
                 args: install
 
+          - name: Authenticate Google
+            uses: 'google-github-actions/auth@v2'
+            with:
+              credentials_json: '${{ secrets.GCP_SECRET }}'
+
           - name: Write credentials file
             run: echo '${{ secrets.GCP_SECRET }}' >> .df-credentials.json
 
